# SDL_game

./: CMakeLists.txt
src/: main.c
src/core/: constants.hpp  main.cpp
src/player/: player.cpp  player.hpp
